--- a/Source/Samples/net45/Tracker.SqlServer.Test/App.config
+++ b/Source/Samples/net45/Tracker.SqlServer.Test/App.config
@@ -5,8 +5,8 @@
     
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="TrackerContext" providerName="System.Data.SqlClient" connectionString="Data Source=(local);Initial Catalog=Tracker;Integrated Security=True;MultipleActiveResultSets=true;" />
-    <add name="TrackerEntities" connectionString="metadata=res://*/Tracker.csdl|res://*/Tracker.ssdl|res://*/Tracker.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Tracker;integrated security=True;MultipleActiveResultSets=true;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TrackerContext" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=Tracker;Integrated Security=True;MultipleActiveResultSets=true;" />
+    <add name="TrackerEntities" connectionString="metadata=res://*/Tracker.csdl|res://*/Tracker.ssdl|res://*/Tracker.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=Tracker;integrated security=True;MultipleActiveResultSets=true;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
